Got some Resolutions and things enumerated, yay!

--- a/src/Enhance.Logic/Enhance.Logic.csproj
+++ b/src/Enhance.Logic/Enhance.Logic.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Dialogs\WPFCommonDialog.cs" />
     <Compile Include="Models\ColorDepths.cs" />
     <Compile Include="Models\PageSizes.cs" />
+    <Compile Include="Models\Resolutions.cs" />
     <Compile Include="Models\Scanner.cs" />
     <Compile Include="Services\Interfaces\IScannerService.cs" />
     <Compile Include="Services\ScannerService.cs" />
