--- a/src/Enhance/Enhance.csproj
+++ b/src/Enhance/Enhance.csproj
@@ -45,14 +45,17 @@
     <Reference Include="Autofac.Configuration">
       <HintPath>..\packages\Autofac.2.6.1.841\lib\NET40\Autofac.Configuration.dll</HintPath>
     </Reference>
-    <Reference Include="Caliburn.Micro">
-      <HintPath>..\packages\Caliburn.Micro.1.3.1\lib\net40\Caliburn.Micro.dll</HintPath>
-    </Reference>
-    <Reference Include="Caliburn.Micro.Autofac">
-      <HintPath>..\packages\Caliburn.Micro.Autofac.1.3.0\lib\net40\Caliburn.Micro.Autofac.dll</HintPath>
-    </Reference>
     <Reference Include="MahApps.Metro">
       <HintPath>..\packages\MahApps.Metro.0.7.1.0\lib\net40\MahApps.Metro.dll</HintPath>
+    </Reference>
+    <Reference Include="Phoenix">
+      <HintPath>..\packages\Phoenix.0.2.0.129\lib\net40\Phoenix.dll</HintPath>
+    </Reference>
+    <Reference Include="Phoenix.Extensions.Autofac">
+      <HintPath>..\packages\Phoenix.Extensions.Autofac.0.2.0.129\lib\net40\Phoenix.Extensions.Autofac.dll</HintPath>
+    </Reference>
+    <Reference Include="Serialization">
+      <HintPath>..\packages\Silverlight-Serializer.2.0.0.0\lib\net40\Serialization.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
@@ -69,6 +72,9 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="Transitionals">
+      <HintPath>..\packages\Phoenix.0.2.0.129\lib\net40\Transitionals.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -78,16 +84,37 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="ViewModels\ShellViewModel.cs" />
+    <Compile Include="Features\HomeController.cs" />
+    <Compile Include="Features\Index.xaml.cs">
+      <DependentUpon>Index.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Features\IndexViewModel.cs" />
+    <Compile Include="Features\ScanDocument.xaml.cs">
+      <DependentUpon>ScanDocument.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Features\ScanDocumentViewModel.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="AppBootstrapper.cs" />
-    <Compile Include="ViewModels\Interfaces\IShell.cs" />
-    <Page Include="Views\ShellView.xaml">
+    <Compile Include="Shell.xaml.cs">
+      <DependentUpon>Shell.xaml</DependentUpon>
+    </Compile>
+    <Page Include="Features\Index.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Features\ScanDocument.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Resources\Icons.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Shell.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
@@ -115,6 +142,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <Resource Include="Resources\Entypo.ttf" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -135,6 +163,9 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Entypo-license.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
