--- a/src/Enhance.Logic/Enhance.Logic.csproj
+++ b/src/Enhance.Logic/Enhance.Logic.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Dialogs\WPFCommonDialog.cs" />
     <Compile Include="Models\ColorDepths.cs" />
+    <Compile Include="Models\Orientations.cs" />
     <Compile Include="Models\PageSizes.cs" />
     <Compile Include="Models\Resolutions.cs" />
     <Compile Include="Models\Scanner.cs" />
